@@ -1,7 +1,6 @@
 package io.quarkiverse.chappie.deployment.action;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
@@ -9,8 +8,8 @@ import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 
 import io.quarkiverse.chappie.deployment.ChappieAvailableBuildItem;
-import io.quarkiverse.chappie.deployment.SourceCodeFinder;
-import io.quarkiverse.chappie.deployment.sourceoperation.SourceGenerationBuildItem;
+import io.quarkiverse.chappie.deployment.ContentIO;
+import io.quarkiverse.chappie.deployment.workspace.GenerationBuildItem;
 import io.quarkus.deployment.IsDevelopment;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
@@ -23,40 +22,34 @@ class TestGenerationDevUIProcessor {
 
     @BuildStep
     void createBuildTimeActions(Optional<ChappieAvailableBuildItem> chappieAvailable,
-            BuildProducer<SourceGenerationBuildItem> sourceGenerationProducer,
+            BuildProducer<GenerationBuildItem> generationProducer,
             AIBuildItem aiBuildItem) {
         if (chappieAvailable.isPresent()) {
-            sourceGenerationProducer
-                    .produce(new SourceGenerationBuildItem("Generate Test", (Map<String, String> params) -> {
+            generationProducer
+                    .produce(new GenerationBuildItem("Generate Test", (Map<String, String> params) -> {
                         if (params.containsKey("path")) {
                             String path = params.get("path");
-                            try {
-                                Path sourcePath = Paths.get(new URI(path));
-                                String sourceCode = SourceCodeFinder.getSourceCode(sourcePath);
-                                if (sourceCode != null) {
-                                    AIClient aiClient = aiBuildItem.getAIClient();
-                                    CompletableFuture<AIFileResponse> response = aiClient
-                                            .generateSource(Optional.of(SYSTEM_MESSAGE), USER_MESSAGE, sourceCode)
-                                            .thenApply(contents -> new AIFileResponse(createTestPath(sourcePath),
-                                                    contents.generatedSource()));
-                                    return response;
-                                }
-                            } catch (URISyntaxException ex) {
-                                throw new RuntimeException(ex);
+                            String contents = ContentIO.readContents(path);
+                            if (contents != null) {
+                                AIClient aiClient = aiBuildItem.getAIClient();
+                                CompletableFuture<AIFileResponse> response = aiClient
+                                        .generate(Optional.of(SYSTEM_MESSAGE), USER_MESSAGE, path, contents)
+                                        .thenApply(c -> new AIFileResponse(createTestPath(path),
+                                                c.generatedContent()));
+                                return response;
                             }
                         }
                         return null;
-                    }));
+                    }, Patterns.JAVA_SRC));
         }
     }
 
-    // TODO: Will this work in Gradle ?
-    private Path createTestPath(Path srcPath) {
-        String s = srcPath.toString();
-        s = s.replace("/main/", "/test/");
-        s = s.substring(0, s.length() - 5);
-        s = s + "Test.java";
-        return Path.of(s);
+    private String createTestPath(String path) {
+        Path sourcePath = Paths.get(path);
+        String modifiedPath = sourcePath.toString().replace(File.separator + "main" + File.separator,
+                File.separator + "test" + File.separator);
+        String testPath = modifiedPath.substring(0, modifiedPath.length() - 5) + "Test.java";
+        return testPath;
     }
 
     private static final String SYSTEM_MESSAGE = "Your job is to generate test for the provided Quarkus source code. Make sure the solutions is done in the Quarkus recomended way";
